--- a/mods/ts/rules/shared-vehicles.yaml
+++ b/mods/ts/rules/shared-vehicles.yaml
@@ -110,7 +110,7 @@ HARV:
 	-WithModelBody:
 	WithModelUnloadBody:
 	Explodes@TiberiumExplosion:
-		RequiresCondition: !no-tiberium && !traped
+		RequiresCondition: !no-tiberium
 		Weapon: TiberiumExplosion
 	BodyOrientation:
 		UseClassicPerspectiveFudge: False
