--- a/mods/ts/audio/voices.yaml
+++ b/mods/ts/audio/voices.yaml
@@ -218,3 +218,19 @@ Scrin:
 		Move: 32-i002, 32-i004
 		Attack: 32-i006
 		Die: 32-i008
+
+CyborgReap:
+	Voices:
+		Select: 60-n100, 60-n102, 60-n104
+		Move: 60-n106, 60-n108, 60-n110
+		Action: 60-n106, 60-n108, 60-n110
+		Attack: 60-n112, 60-n114, 60-n116
+		Die: spiddie1
+
+Limpet:
+	Voices:
+		Select: limpc3, limpc4, limpq3, limpq4
+		Move: limpc3, limpc4, limpq3, limpq4
+		Unload: limpc3, limpc4, limpq3, limpq4
+		Action: limpc3, limpc4, limpq3, limpq4
+		Attack: limpc3, limpc4, limpq3, limpq4
